Convert account page

--- a/bs3/index.html
+++ b/bs3/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Calvin 'calzoneman' 'cyzon' Montgomery">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/navbar-footer.css" rel="stylesheet">
-    <link href="css/ytsync.css" rel="stylesheet">
+    <link href="css/cytube.css" rel="stylesheet">
   </head>
   <body>
     <div id="wrap">
