--- a/bs3/index.html
+++ b/bs3/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-lg-8 col-md-8">
             <h3>Public Channels</h3>
             <table id="channeldata" class="table table-striped table-bordered">
               <thead>
@@ -35,7 +35,7 @@
               </thead>
             </table>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <h3>Enter Channel</h3>
             <input id="channel" type="text" placeholder="Channel Name" class="form-control input-block-level"><br>
             <div class="alert alert-info"><strong>Note: </strong> to register a channel, simply enter a channel name that isn't being used.  The first person to join will have temporary administrator status of that channel, and the channel can be registered by clicking the button on the blue prompt that appears.</div>
